fix: update CopilotClientTest to match buildReprimand(title, kind) signature
The buildReprimand method was changed from buildReprimand(String kind) to
buildReprimand(String title, String kind) to include the specific tool name
in the reprimand message. Update tests accordingly:
- Update invokeBuildReprimand helper to pass both title and kind via reflection
- Update buildReprimand_readKind/executeKind assertions to match new message format
- Add buildReprimand_knownToolName test for the "the `bash` built-in tool" path
- Fix get(0) → getFirst() and remove redundant @SuppressWarnings

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>